--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-html {
+.login-background {
     height: 100%;
     background-color: #3ab1f4;
     /* For browsers that do not support gradients */
@@ -9,6 +9,9 @@ html {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.login-screen {
     min-height: 95vh;
 }
 
@@ -73,4 +76,100 @@ input::placeholder {
     border-radius: 1.5rem;
     color: white;
     background-image: linear-gradient(55deg, #44BBFF, #CDEBFB);
+}
+
+
+/* Doctor View */
+
+.curved-background {
+    position: fixed;
+    padding: 0;
+    margin: 0;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    /* Background color */
+    background: linear-gradient(#3AB1F4, white);
+    /* border-radius: 0 0 150% 10%; */
+    /* Size */
+    background-repeat: no-repeat;
+}
+
+
+/* .curved-background:before {
+    content: "";
+    display: block;
+    position: absolute;
+    border-radius: 100% 50%;
+    width: 340px;
+    height: 80px;
+    background-color: white;
+    right: -5px;
+    top: 40px;
+}
+
+.curved-background {
+    content: "";
+    display: block;
+    position: absolute;
+    border-radius: 100% 50%;
+    width: 300px;
+    height: 70px;
+    background-color: linear-gradient(#3AB1F4, white);
+    left: 0;
+    top: 27px;
+} */
+
+.flex-container-doctor {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    margin-top: 10vh;
+}
+
+.flex-container-doctor-child {
+    flex-basis: 100%;
+    justify-content: center;
+    text-align: center;
+    padding: 0.5em;
+}
+
+.flex-container-doctor-child h1 {
+    font-family: 'Sulphur Point', sans-serif;
+    font-weight: 700;
+    font-size: 2.5em;
+}
+
+#doc-ava {
+    width: 7%;
+}
+
+.flex-docItems {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    margin: 0px;
+    margin-top: 4em;
+    padding: 0px;
+}
+
+.doc-items {
+    text-align: center;
+    width: 33.3%;
+    font-family: 'Sulphur Point', sans-serif;
+    color: #3AB1F4;
+}
+
+.doc-icons {
+    max-width: 25%;
+    height: auto;
+    filter: invert(75%) sepia(48%) saturate(5943%) hue-rotate(176deg) brightness(103%) contrast(91%);
+}
+
+#user-ava {
+    max-width: 10%;
+    height: auto;
 }
