--- a/style.css
+++ b/style.css
@@ -16,7 +16,8 @@
 }
 
 .login-form h1,
-.button {
+.button,
+.error {
     text-align: center;
 }
 
@@ -39,8 +40,8 @@ input::placeholder {
     opacity: 50%;
 }
 
-.login-form label,
-.login-form input {
+.login-form label:not(.button),
+.login-form input:not(.button) {
     margin-left: 150px;
     width: 400px;
 }
@@ -64,18 +65,40 @@ input::placeholder {
     text-align: center;
 }
 
-.button button {
+.button .btn {
+    display: block;
+    margin: 0 auto;
     font-family: inherit;
     font-weight: 700;
     font-size: larger;
     width: 250px;
     height: auto;
-    padding-left: 1em;
-    padding-right: 1em;
     border: none;
+    padding: 0;
     border-radius: 1.5rem;
     color: white;
     background-image: linear-gradient(55deg, #44BBFF, #CDEBFB);
+    transition: background-image 0.5s ease-in-out;
+    -webkit-transition-duration: 0.5s;
+    transition-duration: 0.5s;
+    cursor: pointer;
+}
+
+.button .btn:hover {
+    background-image: linear-gradient(55deg, #44BBFF, #5bb4e4);
+    transition: background-image 1s linear;
+}
+
+.error {
+    font-size: smaller;
+    padding: 1rem;
+    display: block;
+    margin: 0 auto;
+    margin-bottom: 2em;
+    color: #9d731f;
+    background-color: #fff3cd;
+    border-radius: 10px;
+    max-width: 300px
 }
 
 
@@ -161,6 +184,27 @@ input::placeholder {
     width: 33.3%;
     font-family: 'Sulphur Point', sans-serif;
     color: #3AB1F4;
+}
+
+.hvr-grow {
+    display: inline-block;
+    vertical-align: middle;
+    -webkit-transform: perspective(1px) translateZ(0);
+    transform: perspective(1px) translateZ(0);
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+    -webkit-transition-property: transform;
+    transition-property: transform;
+    position: relative;
+    overflow: hidden;
+}
+
+.hvr-grow:hover,
+.hvr-grow:focus,
+.hvr-grow:active {
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
 }
 
 .doc-icons {
