add schedule html

--- a/style.css
+++ b/style.css
@@ -267,3 +267,9 @@ input::placeholder {
     margin: none;
     padding: none;
 }
+
+.schedule-text {
+    font-family: Sulphur Point;
+    font-size: 40px;
+    font-weight: bold;
+  }
